align login button in standalone app fixes #813 (#890)

--- a/src/views/pages/profiles/LoginPage.less
+++ b/src/views/pages/profiles/LoginPage.less
@@ -186,7 +186,6 @@
 
             .button {
                 width: 1.8rem;
-                height: 0.4rem;
                 font-size: 0.18rem;
                 margin: 0 auto;
                 margin-top: 0.5rem;
